--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,170 @@
-.titulo-principal{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20;
-    font-weight: bold;
-    margin-left: 20px;
 
+/*Header*/
+.cabecalho{
+    background-color: #26522d;
+    padding: 30px;
+    height: 140px;
+}
+    .container{
+        margin: 0 auto;
+        width: 900px;
+        position: relative;
+    }
+
+    .titulo-principal{
+        color: #fff;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 40;
+        font-weight: bold;
+        margin-top: 50px;
+        transition: all .5s ease-in-out;
+
+    }
+
+    .titulo-principal:hover{
+        transform: translateX(50px) scale(1.2);
+    }
+
+/*Menu de navegação Navegação*/
+nav{
+    position: absolute;
+    top: 20px;
+    right: 0;
+    width: 50%;
+
+}
+
+nav ul{
+    font-size: 0;
+    width: 100%;
+    text-align: right;
+}
+
+nav li{
+    display: inline-block;
+    border-right: 2px #fff solid;
+    padding: 8px 0;
+}
+
+nav li:last-child{
+    border-right: 0;
+}
+
+nav a{
+    font-family: Arial, Arial, Helvetica, sans-serif;
+    color: #fff;
+    font-size: 22px;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 8px 16px;
+}
+
+nav a:hover{
+    text-decoration: underline;
+    background-color: #3e5241;
+}
+
+#banner{
+    height: 550px;
+    width: 100%;
+    object-fit: cover;
+    object-position: 0% 65%;
+}
+
+.conteudo-principal{
+    background-color: #499e57;
+    color: white;
+    padding: 30px;
+    margin-top: 0;
+}
+
+.titulo-centralizado{
+    text-align: center;
+}
+
+.titulo-secao{
+    text-align: center;
+    border-bottom: 1px lightgray dashed;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 26px;
+    margin-bottom: 16px;
+    padding: 16px;
+}
+
+p{
+    text-align: justify;
+    font-size:  20px;
+}
+
+
+.conteudo-principal p{
+    text-align: justify;
+}
+
+#missao{
+    background-color: rgba(63, 104, 241, 0.867);
+    border-radius: 5px;
+    box-shadow: 1px 1px 15px #3e5241;
+    color: #000;
+    font-size: 20px;
+    margin: 20px auto;
+    padding: 15px;
+    text-align: center;
+    width: 70%;
+}
+
+em strong{
+    color: #003300;
+    font-style: italic;
+}
+
+.servicos{
+    background-color: #ffffff;
+    padding: 30px;
+     
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 30%;
+    margin-right:19.5%;
+}
+
+li{
+    list-style: square;
+    margin-left: 20px;
+}
+
+.item{
+    font-size: 20px;
+    font-style: italic;
+}
+
+.imagem-servicos{
+    width: 50%;
+    height: 300px;
+    object-fit: cover;
+    object-position: 0% 50%;
+
+}
+
+/*Rodape*/
+
+footer{
+    background-color: #26522d;
+    padding: 30px;
+    height: 40px
+}
+
+.copyright{
+    color: white;
+    font: 18px Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.copyright span{
+    color: red;
+    font-size: 22px;
 }
